# chromepass

./: .gitignore  .travis.yml  ChromStealer1.4.rar  Chrome Password Stealer.rar  LICENSE  README.md  attacker_ip.txt  config.ini  create.py  create_server.py  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
_modules/: setup.py  steal.py
requirements/: py2exe-0.9.3.1-cp36-none-win_amd64.whl  py2exe-0.9.3.1-cp37-none-win_amd64.whl  py2exe-0.9.3.2-cp36-none-win32.whl  py2exe-0.9.3.2-cp36-none-win_amd64.whl  py2exe-0.9.3.2-cp37-none-win32.whl  py2exe-0.9.3.2-cp37-none-win_amd64.whl  test_server.py
templates/: client  server
templates/chromepass-build/: .gitignore  Cargo.toml  README.md  build.rs
templates/chromepass-build/src/: browser.rs  crypto.rs  email.rs  main.rs  robber.rs
templates/chromepass-server/: Cargo.toml  build.rs
templates/chromepass-server/src/: main.rs  models.rs
templates/chromepass-server/src/.cargo/: config
templates/client/: browser.rs  main.rs  robber.rs
