[package]
name = "chromepass"
version = "0.1.0"
authors = ["darkArp <mario@whitehathacking.tech>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.25.3"
winapi = { version = "0.3.0", features = ["dpapi", "errhandlingapi"] }
base64 = "0.13.0"
aes-gcm = "0.8.0"
reqwest = { version = "*", features = ["blocking", "json"] }
serde_json = "1.0.59"
anyhow = "1.0"
user32-sys = "0.1.2"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'